# scipas

./: .gitignore  CLAUDE.md  README.md  README.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
examples/.ipynb_checkpoints/: pbs_diffusion_length_analysis-checkpoint.ipynb
examples/core/: Untitled.ipynb  generate_lifetime_spectrum.ipynb  pas_cdb.ipynb  pas_db.ipynb
examples/db spectrum examples/: pas_db.ipynb  variable_energy_measurement_parameter_extraction.ipynb
examples/diffusion length optimization/: measurements - diffusion length optimization example.ipynb
examples/lifetime/: discrete_fitting.ipynb  generate_lifetime_spectrum.ipynb  gp_inversion.ipynb  lifetime_inversion-Copy.ipynb  lifetime_inversion-Copy1.ipynb  lifetime_inversion.ipynb  lifetime_inversion_measurement.ipynb  lifetime_inversion_with_variance.ipynb  load lifetime spectrum.ipynb
examples/positron profile/: positron implantation profile in Cu.ipynb  positron implantation profile in Si.ipynb  positron profile in Si.ipynb
examples/transport benchmark/: general_analytical_profiles_benchmark.ipynb  solver_benchmark.ipynb  surface_fraction_benchmark.ipynb
examples/vedb analysis/: vedb_diffusion_length_2layer_simulation.ipynb  vedb_diffusion_length_measurement.ipynb  vedb_diffusion_length_simulation.ipynb  vedb_lineshape.ipynb
libs/positron_profile/: gosh_profile_parameters.txt
pyPAS/: __init__.py
pyPAS/analysis/: __init__.py
pyPAS/coincidence_events_filter/: pas_coincidence.py
pyPAS/core/: __init__.py  cdb.py  db.py  lifetime.py  lt.py  time_resolution.py
pyPAS/filter/: __init__.py  pals_coincidence.py  (+1 more)
pypas/: __init__.py
scipas/: __init__.py
(+154 files in other folders)
