[build-system]
requires = ["setuptools>=74.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPAS"
version = "0.3.0"
description = "Positron Annihilation Spectroscopy analysis tools"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Achiya Yosef Amrusi", email = "ahia.amrosi@mail.huji.ac.il" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0,<3.0",
    "pandas>=2.3,<4.0",
    "scipy>=1.14.0",
    "xarray>=2024.6.0",
    "uncertainties>=3.1",
    "scispectrum>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["pyPAS*"]

[tool.setuptools.package-data]
"pyPAS" = ["libs/**/*.txt"]

[project.urls]
Homepage = "https://github.com/achiyaAmrusi/pyPAS"
Repository = "https://github.com/achiyaAmrusi/pyPAS"
